--- a/app/views/spree/checkout/payment/_mercadopagomethod.html.erb
+++ b/app/views/spree/checkout/payment/_mercadopagomethod.html.erb
@@ -10,6 +10,6 @@
 
 <div class="row">
   <div class="twelve rows alpha omega">
-    <%= link_to I18n.t(:make_payment, scope: :mercado_pago), mercado_pago_checkout_path(payment_method_id: payment_method.id), method: :post, class: "button primary" %>
+    <%= link_to I18n.t(:make_payment, scope: :mercado_pago_method), mercado_pago_checkout_path(payment_method_id: payment_method.id), method: :post, class: "button primary" %>
   </div>
 </div>
