--- a/app/views/spree/checkout/payment/_mercadopagomethod.html.erb
+++ b/app/views/spree/checkout/payment/_mercadopagomethod.html.erb
@@ -1,15 +1,42 @@
 <script>
+
+
+  MercadoPago = {
+      hidePaymentSaveAndContinueButton: function(paymentMethod) {
+          if (MercadoPago.paymentMethodID && paymentMethod.val() == MercadoPago.paymentMethodID) {
+              $("[name='commit']").hide();
+              $('[data-hook=coupon_code]').hide();
+          } else {
+              $("[name='commit']").show();
+              $('[data-hook=coupon_code]').show();
+          }
+      }
+  };
+
+  $(document).ready(function() {
+      checkedPaymentMethod = $('div[data-hook="checkout_payment_step"] input[type="radio"]:checked');
+      MercadoPago.hidePaymentSaveAndContinueButton(checkedPaymentMethod);
+      paymentMethods = $('div[data-hook="checkout_payment_step"] input[type="radio"]').click(function (e) {
+          MercadoPago.hidePaymentSaveAndContinueButton($(e.target));
+      });
+
+      $('button.mercado_pago_button').click(function(event){
+          $(event.target).prop("disabled",true);
+      });
+  });
+
   MercadoPago.paymentMethodID = "<%= payment_method.id %>";
+
 </script>
 
 <div class="row">
-  <div class="twelve rows alpha omega">
+  <div class="col-lg-6 col-md-6">
     <img src="http://imgmp.mlstatic.com/org-img/banners/ar/medios/575X40.jpg" title="MercadoPago - Medios de pago" alt="MercadoPago - Medios de pago" width="575" height="40"/>
   </div>
 </div>
-
+<br>
 <div class="row">
-  <div class="twelve rows alpha omega">
-    <%= link_to I18n.t(:make_payment, scope: :mercado_pago_method), mercado_pago_checkout_path(payment_method_id: payment_method.id), method: :post, class: "button primary" %>
+  <div class="col-md-4 col-md-offset-6 col-lg-5 col-lg-offset-7">
+    <p><%= link_to I18n.t(:make_payment, scope: :mercado_pago_method), mercado_pago_checkout_path(payment_method_id: payment_method.id), method: :post, class: 'btn btn-lg btn-success primary' %></p>
   </div>
 </div>
